--- a/client/partials/BreadCrumbs.html
+++ b/client/partials/BreadCrumbs.html
@@ -48,7 +48,7 @@
           {{else}}
             {{#if isActiveRoute 'recording'}}
               <li><a href="/studies/{{study._id}}/recordings">Recordings</a></li>
-              <li class="active">{{recording.name}}</li>
+              <li class="active">{{recording._id}}</li>
             {{/if}}
           {{/if}}
         {{/if}}
