--- a/client/styles.styl
+++ b/client/styles.styl
@@ -45,15 +45,6 @@ light-red = #CA5765
 pink = #CF256D
 orange = #E8846B
 
-.m-t-15
-    margin-top 15px
-
-.m-t-20
-    margin-top 20px
-
-.m-b-20
-    margin-bottom 20px
-
 z = {
     neg: -7,
     lowest: 1,
@@ -100,3 +91,29 @@ body
 .map-container
     width: 100%
     height: 500px
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+.m-t-15
+    margin-top 15px
+.m-t-20
+    margin-top 20px
+.m-b-10
+    margin-bottom 10px
+.m-b-20
+    margin-bottom 20px
+.m-l-10
+    margin-left 10px
