setup before creating viewings

--- a/client/partials/Footer.html
+++ b/client/partials/Footer.html
@@ -1,5 +1,5 @@
 <template name="Footer">
   <div class="footer">
-    <a href="https://github.com/mattsears18/delphi/blob/master/LICENSE" target="_blank">Copyright © Matthew H. Sears 2018</a>
+    <small><a href="https://github.com/mattsears18/delphi/blob/master/LICENSE" target="_blank">Copyright © 2018 Matthew H. Sears</a></small>
   </div>
 </template>
