--- a/client/styles.styl
+++ b/client/styles.styl
@@ -72,7 +72,7 @@ social = {
     padding 5px
     text-align center
     a
-        color #999
+        color #D3D3D3
 
 .nav-login
     margin-top 15px
