github link in navbar

--- a/client/partials/Navbar.html
+++ b/client/partials/Navbar.html
@@ -10,6 +10,12 @@
           <span class="icon-bar"></span>
         </button>
         <a class="navbar-brand" href="/">EyeTracker</a>
+        <!-- <span class="github-logo"> -->
+
+        <a href="https://github.com/mattsears18/eyetracker" target="_blank" class="navbar-brand">
+          <img src="/GitHub_Logo.png" class="github-logo">
+        </a>
+        <!-- </span> -->
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
