before animating plot

--- a/client/partials/animations/convexHulls/instantaneous.html
+++ b/client/partials/animations/convexHulls/instantaneous.html
@@ -4,7 +4,8 @@
 </head>
 
 <template name="ConvexHullInstantaneous">
-  <div id="ConvexHullInstantaneous-Viewing-{{viewing._id}}"></div>
+  <button id="instantButton">Randomize</button>
+  <div id="ConvexHullInstantaneous-Viewing"></div>
   {{#if Template.subscriptionsReady}}
     <!-- <div> -->
       <!-- <p>Instantaneous convex hull plot here...</p> -->
