--- a/client/styles.styl
+++ b/client/styles.styl
@@ -119,6 +119,8 @@ body
     margin-bottom 20px
 .m-l-10
     margin-left 10px
+.m-r-3
+    margin-right 3px
 .m-r-5
     margin-right 5px
 .m-r-10
@@ -127,3 +129,17 @@ body
 
 .p-b-10
     padding-bottom 10px
+
+
+.gi-1-3x
+    font-size: 1.3em
+.gi-1-5x
+    font-size: 1.5em
+.gi-2x
+    font-size: 2em
+.gi-3x
+    font-size: 3em
+.gi-4x
+    font-size: 4em
+.gi-5x
+    font-size: 5em
