kinda working, refactoring

--- a/client/partials/animations/animation.html
+++ b/client/partials/animations/animation.html
@@ -4,7 +4,8 @@
 </head>
 
 <template name="Animation">
-  {{#if analysisTypeIs "convexHull"}}
+  <div id="Animation"></div>
+  <!-- {{#if analysisTypeIs "convexHull"}}
     {{#if instantContinuousIs "instantaneous"}}
       {{#if slideStepIs "slide"}}
         {{> ConvexHullInstantaneousSlide viewingId=viewingId}}
@@ -41,5 +42,5 @@
     {{#if instantContinuousIs "continuous"}}
       continuous<br>
     {{/if}}
-  {{/if}}
+  {{/if}} -->
 </template>
