--- a/client/partials/BreadCrumbs.html
+++ b/client/partials/BreadCrumbs.html
@@ -52,6 +52,18 @@
           {{/if}}
         {{/if}}
 
+        {{#if isActiveRoute 'images'}}
+          <li><a href="/studies">Studies</a></li>
+          <li><a href="/studies/{{study._id}}">{{study.name}}</a></li>
+          <li class="active">Images</li>
+        {{/if}}
+        {{#if isActiveRoute 'image'}}
+          <li><a href="/studies">Studies</a></li>
+          <li><a href="/studies/{{study._id}}">{{study.name}}</a></li>
+          <li><a href="/studies/{{study._id}}/images">Images</a></li>
+          <li class="active">{{image.name}}</li>
+        {{/if}}
+
         {{#if isActivePath regex='recordings'}}
           <li><a href="/studies">Studies</a></li>
           <li><a href="/studies/{{study._id}}">{{study.name}}</a></li>
