--- a/client/partials/BreadCrumbs.html
+++ b/client/partials/BreadCrumbs.html
@@ -55,12 +55,12 @@
         {{#if isActiveRoute 'images'}}
           <li><a href="/studies">Studies</a></li>
           <li><a href="/studies/{{study._id}}">{{study.name}}</a></li>
-          <li class="active">Images</li>
+          <li class="active">Reference Images</li>
         {{/if}}
         {{#if isActiveRoute 'image'}}
           <li><a href="/studies">Studies</a></li>
           <li><a href="/studies/{{study._id}}">{{study.name}}</a></li>
-          <li><a href="/studies/{{study._id}}/images">Images</a></li>
+          <li><a href="/studies/{{study._id}}/images">Reference Images</a></li>
           <li class="active">{{image.name}}</li>
         {{/if}}
 
