--- a/client/partials/plots/viewings/viewingDurations.html
+++ b/client/partials/plots/viewings/viewingDurations.html
@@ -1,82 +1,6 @@
 <template name="PlotViewingDurations">
-  <div class="col-md-6">
-    <div class="well">
-      {{> PlotHistogram x=durations layout=durationsLayout name="Viewing-Durations"}}
-      <table class="m-t-20">
-        <tbody>
-          <tr>
-            <tr>
-              <th>n (Viewings):&nbsp;</th>
-              <td>
-                {{#if durations}}
-                  {{formatNumber durations.length}}
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Minimum:&nbsp;</th>
-              <td>
-                {{#if durationMin}}
-                  {{millisecondsToHMSMS durationMin}}
-                  [{{formatNumber durationMin}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Maximum:&nbsp;</th>
-              <td>
-                {{#if durationMax}}
-                  {{millisecondsToHMSMS durationMax}}
-                  [{{formatNumber durationMax}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Range:&nbsp;</th>
-              <td>
-                {{#if durationRange}}
-                  {{millisecondsToHMSMS durationRange}}
-                  [{{formatNumber durationRange}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Mean:&nbsp;</th>
-              <td>
-                {{#if durationMean}}
-                  {{millisecondsToHMSMS durationMean}}
-                  [{{formatNumber durationMean}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Median:&nbsp;</th>
-              <td>
-                {{#if durationMedian}}
-                  {{millisecondsToHMSMS durationMedian}}
-                  [{{formatNumber durationMedian}}]
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Skewness:&nbsp;</th>
-              <td>
-                {{#if durationSkewness}}
-                  {{formatNumber durationSkewness}}
-                {{/if}}
-              </td>
-            </tr>
-            <tr>
-              <th>Kurtosis:&nbsp;</th>
-              <td>
-                {{#if durationKurtosis}}
-                  {{formatNumber durationKurtosis}}
-                {{/if}}
-              </td>
-            </tr>
-          </tr>
-        </tbody>
-      </table>
-    </div>
+  <div class="well">
+    {{> PlotHistogram x=x layout=layout name="Viewing-Durations"}}
+    {{> PlotStats x=x}}
   </div>
 </template>
