--- a/client/partials/plots/plot.html
+++ b/client/partials/plots/plot.html
@@ -3,6 +3,6 @@
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 </head>
 
-<template name="PlotHistogram">
+<template name="Plot">
   <div id=Plot-{{name}}></div>
 </template>
