--- a/client/styles.styl
+++ b/client/styles.styl
@@ -109,10 +109,16 @@ body
 
 .m-t-0
     margin-top 0
+.m-t-10
+    margin-top 10px
 .m-t-15
     margin-top 15px
 .m-t-20
     margin-top 20px
+.m-b-0
+    margin-bottom 0
+.m-b-5
+    margin-bottom 5px
 .m-b-10
     margin-bottom 10px
 .m-b-20
