--- a/client/partials/plots/plotRegressionSelect.html
+++ b/client/partials/plots/plotRegressionSelect.html
@@ -1,10 +1,14 @@
 <template name="PlotRegressionSelect">
   <select class="form-control" name="{{name}}" id="{{name}}">
-    <option value="">Participant Average Viewing Duration</option>
+    <option value="">Participant Mean Viewing Duration</option>
+    <option value="">Participant Median Viewing Duration</option>
     <option value="">Participant Total Viewing Duration</option>
+    <option value="">Participant Mean Viewing Count</option>
     <option value="">Participant Average Viewing Count</option>
     <option value="">Participant Total Viewing Count</option>
-    <option value="">Participant Average Convex Hull Size (Slide Method)</option>
-    <option value="">Participant Average Convex Hull Size (Step Method)</option>
+    <option value="">Participant Mean Average Convex Hull Size (Slide Method)</option>
+    <option value="">Participant Median Average Convex Hull Size (Slide Method)</option>
+    <option value="">Participant Mean Average Convex Hull Size (Step Method)</option>
+    <option value="">Participant Median Average Convex Hull Size (Step Method)</option>
   </select>
 </template>
