--- a/client/styles.styl
+++ b/client/styles.styl
@@ -85,7 +85,7 @@ social = {
 body
     margin-bottom 100px
 
-.breadcrumb
+.mtop
     margin-top 70px
 
 .map-container
@@ -133,8 +133,15 @@ body
     margin-right 10px
 
 
+.p-l-5
+    padding-left 5px
+.p-l-10
+    padding-left 10px
+
+
 .p-b-10
     padding-bottom 10px
+
 
 
 .gi-1-3x
