redo study layout

--- a/client/layouts/StudyLayout.html
+++ b/client/layouts/StudyLayout.html
@@ -54,7 +54,7 @@
           </li>
           <li class="{{#if isActivePath regex='analyses'}} active {{/if}}">
             <a href="/studies/{{study._id}}/analyses">
-              <i class="fa fa-chart-area"></i>&nbsp;&nbsp;Analyses {{#if analyses.count}}({{analyses.count}}){{/if}}
+              <i class="fa fa-area-chart"></i>&nbsp;&nbsp;Analyses {{#if analyses.count}}({{analyses.count}}){{/if}}
             </a>
           </li>
         </ul>
