processed statuses and reprocess analyses and datafiles

--- a/client/layouts/StudyLayout.html
+++ b/client/layouts/StudyLayout.html
@@ -20,7 +20,7 @@
             {{#if study.hasNoDatafiles}}
               &nbsp;<a href="#" class="update-study"><i class="fa fa-pencil"></i></a>
             {{else}}
-              {{#if study.allDatafilesProcessed}}
+              {{#if study.datafilesProcessed}}
                 &nbsp;<a href="#" class="update-study"><i class="fa fa-pencil"></i></a>
               {{else}}
                 &nbsp;<i class="fa fa-pencil text-muted"></i>
