--- a/client/layouts/StudyLayout.html
+++ b/client/layouts/StudyLayout.html
@@ -17,7 +17,7 @@
           {{study.name}}
 
           {{#if study.hasPermission 'update'}}
-            &nbsp;<a href="#" class="update-study"><i class="fa fa-pencil"></i></a>
+            &nbsp;<a href="" class="update-study"><i class="fa fa-pencil"></i></a>
           {{/if}}
         </h3>
 
