--- a/client/styles.styl
+++ b/client/styles.styl
@@ -128,6 +128,10 @@ body
     margin-bottom 10px
 .m-b-20
     margin-bottom 20px
+.m-l-3
+    margin-left 3px
+.m-l-5
+    margin-left 5px
 .m-l-10
     margin-left 10px
 .m-r-3
@@ -161,6 +165,7 @@ body
     font-size: 4em
 .gi-5x
     font-size: 5em
+
 
 
 .spinner
